--- a/lib/ground_control_web/live/page_live.html.leex
+++ b/lib/ground_control_web/live/page_live.html.leex
@@ -1,11 +1,11 @@
 <section class="text-gray-600 body-font">
-  <div class="flex flex-row">
+  <div class="md:flex md:flex-row">
   <%= for {env, repositories} <- @environments do %>
-    <div class="w-1/2 flex-auto">
-      <div class="text-center mb-10">
-        <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-gray-900 mb-4"><%= env %></h1>
+    <div class="md:w-1/2 flex-auto">
+      <div class="text-center mb-4 md:mb-10">
+        <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-gray-900 mt-4"><%= env %></h1>
       </div>
-      <div class="flex flex-wrap lg:w-4/5 sm:mx-auto sm:mb-2 -mx-2">
+      <div class="flex flex-wrap lg:w-4/5 xl:w-11/12 sm:mx-auto sm:mb-2">
         <%= for repo <- repositories do %>
           <%= live_component @socket, GroundControlWeb.RepositoryComponent, repo: repo %>
         <% end %>
